Merge formatted data to actions